fix: search inputs were too small on IE5.5 and lower

--- a/assets/main.css
+++ b/assets/main.css
@@ -22,6 +22,7 @@ div.main, th { text-align: center;}
 div.page { text-align: left; margin: auto; width:98%;}
 h2.title { text-align: center; font-size:24px; margin: 15px 0;}
 b.contrib { background: #FFFF00; color: #FF0040;}
+b.contrib a:link, a:visited { color: #0000FF;}
 
 /* index.html.twig */
 
@@ -34,12 +35,12 @@ form.index-buttons input.button2 { background: #ebebeb url(./images/card_disable
 
 div.sform { height: 1.6em; width: 90%; padding-bottom: 6px;}
 div.sform select { height: 100%; width: 100%; }
-div.sform input { height: 20px; width: 100%; /* **/ height: 90%; width: 99%; /** */}
+div.sform input { height: auto; width: 100%; /* **/ height: 90%; width: 99%; /** */}
 
 td.table-width { width: 0; }
 span.field1 { height: 1.75em; width: 15em; font-size:14px; margin-bottom:4px; /* **/ float:left; /** */}
 span.field1 span {float:left; margin-left:0.4em;}
-span.field1 input {height: 20px; width: 20px; float:left;  font-size:12px; /* **/ height: 1.25em; width: 1.25em; /** */}
+span.field1 input {height: 21px; width: 21px; float:left;  font-size:12px; /* **/ height: 1.25em; width: 1.25em; /** */}
 span.field2 {width: 12em;font-size:16px; margin-bottom:4px; /* **/ float:left; /** */}
 
 div.butn { text-align: center; margin-top:20px;}
